@@ -1,3 +1,8 @@
+2007-09-03 [colin]	0.15.2cvs2
+
+	* src/gtkhtml2_viewer.c
+		Add Zoom in/out to context menu
+
 2007-09-03 [colin]	0.15.2cvs1
 
 	* po/zh_CN.po
